Fix button widths on mobile view

--- a/static/sass/_pattern_cube-table.scss
+++ b/static/sass/_pattern_cube-table.scss
@@ -39,16 +39,29 @@
 }
 
 .p-table--cube__contents {
-  > * {
-    padding-top: 0;
+  @media only screen and (max-width: $breakpoint-medium) {
+    > p,
+    h5 {
+      padding-top: 0;
+    }
+
+    > a {
+      margin-left: 0 !important;
+      width: 100%;
+    }
   }
 
   @media only screen and (min-width: $breakpoint-medium) {
     padding-top: 1rem;
 
-    > * {
+    > p,
+    h5 {
       margin: 0;
       padding: 0;
+    }
+
+    > a {
+      margin-top: -0.5rem;
     }
 
     li:first-of-type {
